# imdb-pipeline

./: ReadMe.md
etl_pipeline/: pyproject.toml  run_pipeline.py
etl_pipeline/data/: 250_details.json  casts.parquet  directors.parquet  movies.parquet  production_companies.parquet  top_250.json  top_250_details.json  writers.parquet
etl_pipeline/src/: data_transform.py  db_loader.py  db_setup.py  model.py  web_scraper.py
etl_pipeline/tests/: test_data_transform.py  test_db_loader.py  test_scraper.py
